reverted back from == null to isempty() renamed example dockerfile commandlinerunner now only runs on !prod